--- a/app/globalStyles.css
+++ b/app/globalStyles.css
@@ -13,9 +13,12 @@
   @apply text-3xl font-bold;
   }
   .section{
-  @apply flex flex-col gap-10 text-center mt-16;
+  @apply flex flex-col gap-10 mt-16;
   }
   h1, h2, h3, h4, h5, h6 { 
    @apply font-mono;
+  }
+  body {
+    @apply text-justify
   }
 }
