style: About me section

--- a/app/globalStyles.css
+++ b/app/globalStyles.css
@@ -13,7 +13,7 @@
   @apply text-3xl font-bold;
   }
   .section{
-  @apply flex flex-col gap-10 mt-16 max-w-full;
+  @apply flex flex-col gap-10 mt-32 max-w-full;
   }
   h1, h2, h3, h4, h5, h6 { 
    @apply font-mono;
@@ -27,11 +27,24 @@
   background: linear-gradient(
     to right,
     white 0%,
-    white 20%,
+    white 10%,
     rgb(255 255 255 / 0%) 100%
   );
-  width: 100px;
+  width: 25px;
   height: 100%;
   position: absolute;
   z-index: 3;
+}
+
+@keyframes scrollRightToLeft {
+  0% {
+    transform: translateX(5%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.horizontal-scroll-animation {
+  animation: scrollRightToLeft 1s ease-in-out 1;
 }
