--- a/app/globalStyles.css
+++ b/app/globalStyles.css
@@ -23,32 +23,6 @@
   }
 }
 
-.gradient {
-  background: linear-gradient(
-    to right,
-    white 0%,
-    white 10%,
-    rgb(255 255 255 / 0%) 100%
-  );
-  width: 25px;
-  height: 100%;
-  position: absolute;
-  z-index: 3;
-}
-
-@keyframes scrollRightToLeft {
-  0% {
-    transform: translateX(5%);
-  }
-  100% {
-    transform: translateX(0%);
-  }
-}
-
-.horizontal-scroll-animation {
-  animation: scrollRightToLeft 1s ease-in-out 1;
-}
-
 /* hide audio controls */
 audio::-webkit-media-controls-timeline,
 audio::-webkit-media-controls-volume-slider,
@@ -63,4 +37,50 @@ audio {
   height: 34px; /* Small height for the controls */
   padding: 0;
   margin: 0;
+}
+
+@keyframes shrinkImage {
+  from {
+      height: 100vh;
+      opacity: 1;
+  }
+  to {
+      height: 200px;
+      opacity: 1;
+  }
+}
+
+.animate-shrink {
+  animation: shrinkImage 0.8s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+@keyframes slide-in {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  70% {
+    transform: translateX(10%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+
+.animate-slide-in {
+  animation: slide-in 1.4s ease-out forwards;
+} 
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  95% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.animate-fade-in {
+  animation: fadeIn 1.5s ease-in forwards;
 }
