--- a/app/globalStyles.css
+++ b/app/globalStyles.css
@@ -63,8 +63,11 @@ audio {
 }
 
 .animate-fade-in {
-  animation: fadeIn 1.2s ease-in forwards;
+  animation: fadeIn 1.4s ease-in forwards;
 }
+/* .animate-fade-in-2 {
+  animation: fadeIn s ease-in forwards;
+} */
 
 @keyframes logo-swap {
   0% {
@@ -78,9 +81,7 @@ audio {
   }
 }
 
-.animate-logo-swap {
-  animation: logo-swap 1s ease-in-out forwards;
-}
+
 
 @keyframes slide-from-top {
   0% {
@@ -96,6 +97,18 @@ audio {
   }
 }
 
-.animate-slide-from-top {
-  animation: slide-from-top 0.8s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+.animate-logo-0 {
+  animation: slide-from-top 0.0s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+.animate-logo-1 {
+  animation: slide-from-top 0.3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+.animate-logo-2 {
+  animation: slide-from-top 0.6s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+.animate-logo-3 {
+  animation: logo-swap .9s ease-in-out forwards;
+}
+.animate-logo-4 {
+  animation: logo-swap 1.3s ease-in-out forwards;
 }
