--- a/app/globalStyles.css
+++ b/app/globalStyles.css
@@ -23,7 +23,10 @@
   }
 }
 
-/* hide audio controls */
+/*  */
+/* audio controls */
+/*  */
+
 audio::-webkit-media-controls-timeline,
 audio::-webkit-media-controls-volume-slider,
 audio::-webkit-media-controls-mute-button,
@@ -39,37 +42,36 @@ audio {
   margin: 0;
 }
 
+/*  */
+/* animations */
+/*  */
+
 @keyframes slide-from-right {
   0% {
     transform: translateX(100%);
     opacity: 0;
   }
-  10% {
-    opacity: 1;
-  }
   100% {
     transform: translateX(0%);
+    opacity: 1;
   }
 }
 
 .animate-slide-from-right {
-  animation: slide-from-right 1s ease-out forwards;
+  animation: slide-from-right 1s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 } 
 
 @keyframes fadeIn {
   0% { opacity: 0; }
-  95% { opacity: 0; }
+  99% { opacity: 0; }
   100% { opacity: 1; }
 }
 
 .animate-fade-in {
-  animation: fadeIn 1.4s ease-in forwards;
+  animation: fadeIn 1s ease-in forwards;
 }
-/* .animate-fade-in-2 {
-  animation: fadeIn s ease-in forwards;
-} */
 
-@keyframes logo-swap {
+@keyframes logo-fade-in {
   0% {
     opacity: 0;
   }
@@ -77,38 +79,29 @@ audio {
     opacity: 0;
   }
   100% {
-    opacity: 1;
+    opacity: .5;
   }
 }
 
-
+.animate-logo-fade-in {
+  animation: logo-fade-in var(--animation-delay) ease-in-out backwards;
+}
 
 @keyframes slide-from-top {
   0% {
     transform: translateY(-100%);
     opacity: 0;
   }
-  20% {
-    opacity: 1;
+  80% {
+    opacity: .5;
   }
   100% {
     transform: translateY(0);
-    opacity: 1;
+    opacity: .5;
   }
 }
 
-.animate-logo-0 {
-  animation: slide-from-top 0.0s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+.animate-logo-slide-from-top {
+  animation: slide-from-top var(--animation-delay) cubic-bezier(0.4, 0, 0.2, 1)  forwards;
 }
-.animate-logo-1 {
-  animation: slide-from-top 0.3s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-}
-.animate-logo-2 {
-  animation: slide-from-top 0.6s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-}
-.animate-logo-3 {
-  animation: logo-swap .9s ease-in-out forwards;
-}
-.animate-logo-4 {
-  animation: logo-swap 1.3s ease-in-out forwards;
-}
+
